objects/UserTerritoryCustom__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <label>Job Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_ID__c</fullName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OMF_Access_Level__c</fullName>
        <label>OMF Access Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMF_Grantor_Email__c</fullName>
        <label>OMF Grantor Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMF_Proxy_Flag__c</fullName>
        <label>OMF Proxy Flag</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>This field is created for 2028 project for CA visibility</description>
        <label>Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_MOD_Stamp__c</fullName>
        <label>System MOD Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TerritoryID__c</fullName>
        <label>TerritoryID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <label>UserID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>biz_subrole_name__c</fullName>
        <description>This field is created for 2028 project for CA visibility</description>
        <label>biz_subrole_name</label>
        <length>768</length>
        <type>LongTextArea</type>
    </fields>
    <label>UserTerritoryCustom</label>
    <nameField>
        <label>UserTerritoryCustom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserTerritoryCustoms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>